# ascii-pay-server

./: .dockerignore  .env  .gitattributes  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  ascii-pay-tests.postman_collection.json  backup.sh  build.rs  derivation.nix  diesel.toml  docker-compose.override.yml  docker-compose.release.yml  docker-compose.test.yml  docker-compose.yml  env.dev  export-database.sh  flake.nix  generate-test-certificates.sh  import-database.sh  nginx.conf  tests.sh
.cargo/: config.toml
.github/workflows/: rust.yml
AsciiPayCard.pass/: pass.json
AsciiPayCard.pass/de.lproj/: pass.strings
AsciiPayCard.pass/en.lproj/: pass.strings
collections/: ascii-pay-tests.postman_collection.json
doc/: NFC Flow.puml
docker/: Dockerfile.db  db.Dockerfile  newman.Dockerfile  server.Dockerfile  web.Dockerfile
migrations/2019-06-27-111459_init/: down.sql  up.sql
migrations/2021-08-11-153000_init/: down.sql  up.sql
migrations/2021-09-01-000000_accounts/: down.sql  up.sql
migrations/2021-09-01-000001_products/: down.sql  up.sql
migrations/2021-09-01-000002_transaction/: down.sql  up.sql
migrations/2021-09-01-000003_authentication_password/: down.sql  up.sql
migrations/2021-09-01-000004_authentication_nfc/: down.sql  up.sql
migrations/2021-09-01-000005_apple_wallet/: down.sql  up.sql
migrations/2021-10-24-000000_account_nullable/: down.sql  up.sql
migrations/2021-12-28-000006_allow_multiple_nfc_tokens/: down.sql  up.sql
migrations/2021-12-28-000007_foreign_keys/: down.sql  up.sql
proto/: authentication.proto
src/: apns.rs  auth_handler.rs  auth_routes.rs  backup.rs  database.rs  demo_data.rs  docs.rs  env.rs  error.rs  errors.rs  grpc_server.rs  http_server.rs  identity_policy.rs  identity_service.rs  init_server.rs  mail.rs  main.rs  models.rs  request_state.rs  schema.rs  server.rs  tcp_server.rs  utils.rs  wallet.rs
src/api/: account_auth_methods.rs  account_status.rs  accounts.rs  auth.rs  auth_handlers.rs  authentication.rs  categories.rs  identification.rs  mifare.rs  mod.rs  nfc_id.rs  nfc_mifare.rs  product_import.rs  products.rs  purchases.rs  register.rs  report.rs  transactions.rs  wallet.rs  wallet_routes.rs
src/core/: accounts.rs  apns.rs  authentication.rs  authentication_barcode.rs  authentication_nfc.rs  authentication_password.rs  categories.rs  env.rs  errors.rs  mail.rs  mod.rs  models.rs  prices.rs  products.rs  schema.rs  sessions.rs  stats.rs  transactions.rs  utils.rs  wallet.rs
src/database/: migration.rs  tests.rs
src/grpc/: authentication.rs  authentication_grpc.rs  mod.rs
src/import/: mod.rs  product_import.rs  sql_dump_import.rs
src/model/: accounts.rs  apns.rs  authentication_barcode.rs  authentication_nfc.rs  authentication_password.rs  categories.rs  enums.rs  env.rs  errors.rs  mail.rs  mod.rs  prices.rs  products.rs  redis.rs  schema.rs  session.rs  sessions.rs  stats.rs  transactions.rs  utils.rs  wallet.rs
src/repo/: accounts.rs  auth.rs  authentication_token.rs  categories.rs  identification.rs  mod.rs  prices.rs  products.rs  transactions.rs
src/utils/: apns.rs  bb8_diesel.rs  env.rs  errors.rs  mail.rs  mifare_utils.rs  mod.rs  utils.rs
src/web/: accounts.rs  auth_handlers.rs  categories.rs  cron.rs  identity_policy.rs  index.rs  login.rs  mod.rs  products.rs  server.rs  settings.rs  terminal.rs  transactions.rs  utils.rs
static/javascripts/: live_search_accounts.js  live_search_categories.js  live_search_products.js  main.js  overview.js  set_account_barcode.js  set_product_barcode.js  terminal.js
static/stylesheets/: style-auto.css  style-auto.scss  style-dark.css  style-dark.scss  style-light.css  style-light.scss  style.css  style.scss
static/templates/: 404.handlebars  _admin_navigation.html  _default_navigation.html  _head.handlebars  _head.html  _navigation.html  account_create.html  account_edit.html  account_list.html  admin_account_create.handlebars  admin_account_edit.handlebars  admin_account_edit.html  admin_account_list.handlebars  admin_category_create.handlebars  admin_category_edit.handlebars  admin_category_list.handlebars  admin_dashboard.handlebars  admin_product_create.handlebars  category_create.html  (+39 more)
(+56 files in other folders)
